Fix home page styling on mobile

--- a/src/styles/misc/HomePage.scss
+++ b/src/styles/misc/HomePage.scss
@@ -11,3 +11,9 @@
     font-size: 40px;
   }
 }
+
+@media screen and (max-width: 1280px) {
+  .home-page {
+    margin-left: 0;
+  }
+}
